MDEV-6740 : Galera crash in rpl_sql_thread_info/cached_charset_compare

Properly initialized rpl_sql_thread_info for bf threads.
Also removed some dead code.