sql/sql_prepare.cc
@@ -3548,8 +3548,10 @@ Prepared_statement::set_parameters(String *expanded_query,
 }
 
 #ifdef WITH_WSREP
+/* forward declaration */
 void wsrep_replay_transaction(THD *thd);
 #endif /* WITH_WSREP */
+
 /**
   Execute a prepared statement. Re-prepare it a limited number
   of times if necessary.
@@ -3639,7 +3641,9 @@ reexecute:
     break;
 
   case MUST_REPLAY:
-    (void)wsrep_replay_transaction(thd);
+    (void) wsrep_replay_transaction(thd);
+    /* fallthrough */
+
   default: break;
   }
   mysql_mutex_unlock(&thd->LOCK_wsrep_thd);
