sql/wsrep_thd.cc
@@ -88,30 +88,6 @@ void wsrep_client_rollback(THD *thd)
 
 #define NUMBER_OF_FIELDS_TO_IDENTIFY_COORDINATOR 1
 #define NUMBER_OF_FIELDS_TO_IDENTIFY_WORKER 2
-//#include "rpl_info_factory.h"
-
-static Relay_log_info* wsrep_relay_log_init(const char* log_fname)
-{
-
-  /* MySQL 5.6 version has rli factory: */
-#ifdef MYSQL_56
-  uint rli_option = INFO_REPOSITORY_DUMMY;
-  Relay_log_info *rli= NULL;
-  rli = Rpl_info_factory::create_rli(rli_option, false);
-  rli->set_rli_description_event(
-      new Format_description_log_event(BINLOG_VERSION));
-#endif
-  Relay_log_info* rli= new Relay_log_info(false);
-  rli->sql_driver_thd= current_thd;
- 
-  rli->no_storage= true;
-  rli->relay_log.description_event_for_exec=
-    new Format_description_log_event(4);
-
-  return rli;
-}
-
-class Master_info;
 
 static rpl_group_info* wsrep_relay_group_init(const char* log_fname)
 {
@@ -126,7 +102,6 @@ static rpl_group_info* wsrep_relay_group_init(const char* log_fname)
   static LEX_STRING dbname= { C_STRING_WITH_LEN("mysql") };
 
   rli->mi = new Master_info( &dbname,  false);
-  //rli->mi = new Master_info( &(C_STRING_WITH_LEN("wsrep")),  false);
 
   rli->mi->rpl_filter = new Rpl_filter;
   copy_filter_setting(rli->mi->rpl_filter, get_or_create_rpl_filter("", 0));
@@ -151,9 +126,11 @@ static void wsrep_prepare_bf_thd(THD *thd, struct wsrep_thd_shadow* shadow)
   else
     thd->variables.option_bits&= ~(OPTION_BIN_LOG);
 
-  //if (!thd->wsrep_rli) thd->wsrep_rli= wsrep_relay_log_init("wsrep_relay");
   if (!thd->wsrep_rgi) thd->wsrep_rgi= wsrep_relay_group_init("wsrep_relay");
-  //  thd->wsrep_rli->info_thd = thd;
+
+  /* thd->system_thread_info.rpl_sql_info isn't initialized. */
+  thd->system_thread_info.rpl_sql_info=
+    new rpl_sql_thread_info(thd->wsrep_rgi->rli->mi->rpl_filter);
 
   thd->wsrep_exec_mode= REPL_RECV;
   thd->net.vio= 0;
@@ -177,12 +154,12 @@ static void wsrep_return_from_bf_mode(THD *thd, struct wsrep_thd_shadow* shadow)
   thd->variables.tx_isolation = shadow->tx_isolation;
   thd->reset_db(shadow->db, shadow->db_length);
 
+  delete thd->system_thread_info.rpl_sql_info;
   delete thd->wsrep_rgi->rli->mi->rpl_filter;
   delete thd->wsrep_rgi->rli->mi;
   delete thd->wsrep_rgi->rli;
   delete thd->wsrep_rgi;
   thd->wsrep_rgi = NULL;
-;
 }
 
 void wsrep_replay_transaction(THD *thd)
@@ -280,6 +257,10 @@ void wsrep_replay_transaction(THD *thd)
         WSREP_ERROR("trx_replay failed for: %d, query: %s",
                     rcode, thd->query() ? thd->query() : "void");
         /* we're now in inconsistent state, must abort */
+
+        /* http://bazaar.launchpad.net/~codership/codership-mysql/5.6/revision/3962#sql/wsrep_thd.cc */
+        mysql_mutex_unlock(&thd->LOCK_wsrep_thd);
+
         unireg_abort(1);
         break;
       }
